<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="grocito.wingstud.groctiodriver.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="grocito.wingstud.groctiodriver.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile2" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="grocito.wingstud.groctiodriver.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="grocito.wingstud.groctiodriver.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_earning"
        android:name="grocito.wingstud.groctiodriver.ui.earning.EarningFragment"
        android:label="@string/your_earning"
        tools:layout="@layout/fragment_earning" />

    <fragment
        android:id="@+id/nav_history"
        android:name="grocito.wingstud.groctiodriver.ui.orderhistory.framgments.DeliveredFragment"
        android:label="@string/orders_history"
        tools:layout="@layout/fragment_delivered" />
</navigation>