<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>

    <RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bg"
            android:scaleType="fitStart"
            android:layout_weight="1"/>

        <View
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight=".1"/>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="Rider Sign in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_30"/>

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar_transparent"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/login_otp_cart_view_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_20">

                    <TextView
                        style="@style/login_otp_text_view_style"
                        android:text="@string/please_enter_registered_mobile_number"/>

                    <EditText
                        android:id="@+id/etMobileNo"
                        style="@style/normal_text_view"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textSize="@dimen/sp_16"
                        android:hint="@string/mobile_no"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <grocito.wingstud.groctiodriver.custome.ButtonViewRegular
                android:id="@+id/btnLogin"
                style="@style/login_button_style"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_10"
                android:onClick="loginProcess"
                android:text="@string/login_using_otp"/>
            
            
        </LinearLayout>

    </RelativeLayout>

</layout>
